# -IndusMind

./: .gitignore  ANOMALY_DETECTION_PROPOSAL.md  API_CONTRACT.md  MODEL_EVOLUTION.md  README.md  api-contract.yaml  api.py  degradation_analyzer.py  frontend_proxy.py  infer.py  launcher.py  preprocess_integrated.py  run_api.sh  run_bitahub.sh  run_train.sh
module-a/: ANOMALY_DETECTION_PROPOSAL.md  API_CONTRACT.md  Dockerfile  MODEL_EVOLUTION.md  README.md  degradation_analyzer.py  infer.py  lstm_transformer.py  pyproject.toml  run_bitahub.sh  train.py
module-a/api/: main.py  schemas.py
module-a/api/routers/: prediction.py
module-a/data/: data_preprocessing.py  download_data.py  preprocess_integrated.py
module-a/integrated/: integrated_unit_map.csv
module-a/model/: evaluate.py  lstm_transformer.py  train.py
module-a/model/saved/: best_model.pt  metadata.json
module-a/processed/: condition_train.npy  condition_val.npy  feature_names.txt  max_rul.npy  normalization_stats.npz  unit_val.npy  y_train.npy
module-a/v2/: __init__.py  api.py  attribution.py  model.py  train.py  validate.py
module-a/versions/v1/: SNAPSHOT.md
module-b/: .dockerignore  .env.template  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
module-b/.cursor/rules/: tech-stack.mdc
module-b/.github/workflows/: ci.yml
module-b/IndusMind-PPT-Package/: README.md
module-b/IndusMind-PPT-Package/DOCS/: README.md  architecture.md  frontend-handoff.md  knowledge-rag.md  remote-api.md
module-b/config/: aliyun-security-group-rules.csv  paths.yaml
module-b/docs/: project-introduction-for-ppt.md
module-b/knowledge/: README.md
module-b/scripts/: run_agent_api.py  run_e2e_check.py  run_eval.py  run_stable_tunnel.sh  sync_dify_kb.py
module-b/tests/: test_agent_api.py  test_diagnostic_flow.py  test_dify_client.py  test_eval_harness.py  test_hybrid_search.py  test_knowledge_store.py  test_llm_providers.py  test_monitoring_simulator.py  test_schemas.py  test_serverchan_notify.py  test_tools.py
module-c/: README.md  (+2 more)
module-c/backend/: Dockerfile  pyproject.toml
(+123 files in other folders)
