[tool.poetry]
name = "indusmind-module-a"
version = "0.1.0"
description = "IndusMind Module A - Data & Prediction Engine"
authors = ["IndusMind Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.0"
torch = "^2.4.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^24.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
