[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indusmind"
version = "0.1.0"
description = "Industrial O&M diagnostic agent with RAG (CMAPSS / turbofan)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.9,<3",
  "pyyaml>=6.0,<7",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
  "crewai>=1.15,<2",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.24,<2",
  "respx>=0.21,<1",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 110
