[tool.poetry]
name = "indusmind-gateway"
version = "0.1.0"
description = "IndusMind Module C — FastAPI API Gateway"
authors = ["IndusMind Team"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110,<0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
httpx = "^0.27"
websockets = "^12.0"
pydantic = "^2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
